// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Feature default props correctly 1`] = `
.c1 {
  font-size: 6rem;
  font-weight: 300;
  line-height: 5.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  outline: none;
}

<h4
  aria-hidden="false"
  class="c0 c1"
>
  Feature default
</h4>
`;

exports[`should render Feature large correctly 1`] = `
.c1 {
  font-size: 8rem;
  font-weight: 300;
  line-height: 7.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  outline: none;
}

<h3
  aria-hidden="false"
  class="c0 c1"
>
  Feature large
</h3>
`;

exports[`should render Feature primitive as span 1`] = `
.c1 {
  font-size: 6rem;
  font-weight: 300;
  line-height: 5.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  outline: none;
}

<span
  aria-hidden="false"
  class="c0 c1"
>
  Feature span
</span>
`;

exports[`should render Feature white correctly 1`] = `
.c1 {
  font-size: 6rem;
  font-weight: 300;
  line-height: 5.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #FFFFFF;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  outline: none;
}

<h4
  aria-hidden="false"
  class="c0 c1"
>
  Feature white
</h4>
`;

exports[`should render Feature with default styles on mobile correctly 1`] = `
.c1 {
  font-size: 4rem;
  font-weight: 700;
  line-height: 4rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  outline: none;
}

<h4
  aria-hidden="false"
  class="c0 c1"
>
  Feature on mobile
</h4>
`;

exports[`should render Feature with superscriptSmall prop and Super 1`] = `
.c1 {
  font-size: 8rem;
  font-weight: 300;
  line-height: 7.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  outline: none;
}

.c2 {
  position: relative;
  font-size: 64px;
  line-height: 0px;
  font-family: Verizon-NHG-eDS;
}

<h3
  aria-hidden="false"
  class="c0 c1"
>
  Feature large
  <sup
    class="c2"
    size="128"
  >
    ¹
  </sup>
</h3>
`;

exports[`should render Feature without children 1`] = `
.c1 {
  font-size: 6rem;
  font-weight: 300;
  line-height: 5.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  outline: none;
}

<h4
  aria-hidden="false"
  class="c0 c1"
/>
`;
